♿️ Fix contrast ratio in primary button

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -121,7 +121,7 @@ pre[class*="language-"] {
 }
 
 .btn-primary {
-  @apply bg-indigo-500 text-white active:bg-indigo-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mb-1 ease-linear transition-all duration-150 mt-4 w-full disabled:cursor-not-allowed disabled:opacity-50
+  @apply bg-blue-800 text-white active:bg-blue-900 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mb-1 ease-linear transition-all duration-150 mt-4 w-full disabled:cursor-not-allowed disabled:opacity-50
 }
 
 .btn-secondary {
